Upload & List Documents

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>homedash2</name>
+	<name>secure-doc-manager</name>
 	<comment></comment>
 	<projects>
 	</projects>
