--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
   <dependencies>
     <!-- JavaFX -->
     <dependency>
+	    <groupId>org.openjfx</groupId>
+	    <artifactId>javafx-swing</artifactId>
+	    <version>${javafx.version}</version>
+	</dependency>
+    <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>${javafx.version}</version>
